--- a/output.css
+++ b/output.css
@@ -657,22 +657,6 @@ video {
   margin-right: auto;
 }
 
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
-}
-
-.mt-auto {
-  margin-top: auto;
-}
-
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -685,16 +669,40 @@ video {
   margin-bottom: 1rem;
 }
 
-.mb-12 {
-  margin-bottom: 3rem;
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .mt-8 {
   margin-top: 2rem;
 }
 
-.block {
-  display: block;
+.mt-auto {
+  margin-top: auto;
+}
+
+.mt-0 {
+  margin-top: 0px;
+}
+
+.mt-0\.5 {
+  margin-top: 0.125rem;
+}
+
+.-mb-1 {
+  margin-bottom: -0.25rem;
 }
 
 .flex {
@@ -709,8 +717,16 @@ video {
   display: none;
 }
 
+.h-1\/2 {
+  height: 50%;
+}
+
 .h-16 {
   height: 4rem;
+}
+
+.h-20 {
+  height: 5rem;
 }
 
 .h-24 {
@@ -737,6 +753,14 @@ video {
   height: 24rem;
 }
 
+.h-\[350px\] {
+  height: 350px;
+}
+
+.h-\[800px\] {
+  height: 800px;
+}
+
 .h-full {
   height: 100%;
 }
@@ -745,20 +769,36 @@ video {
   height: 100vh;
 }
 
-.h-12 {
-  height: 3rem;
+.h-\[180px\] {
+  height: 180px;
 }
 
-.h-20 {
-  height: 5rem;
+.h-\[220px\] {
+  height: 220px;
+}
+
+.h-\[400px\] {
+  height: 400px;
+}
+
+.h-\[240px\] {
+  height: 240px;
+}
+
+.h-\[140px\] {
+  height: 140px;
+}
+
+.h-\[260px\] {
+  height: 260px;
+}
+
+.h-\[185px\] {
+  height: 185px;
 }
 
 .min-h-\[36rem\] {
   min-height: 36rem;
-}
-
-.min-h-\[52rem\] {
-  min-height: 52rem;
 }
 
 .min-h-\[40rem\] {
@@ -781,6 +821,10 @@ video {
   width: 2rem;
 }
 
+.w-\[32rem\] {
+  width: 32rem;
+}
+
 .w-\[90\%\] {
   width: 90%;
 }
@@ -791,18 +835,6 @@ video {
 
 .w-px {
   width: 1px;
-}
-
-.w-\[22rem\] {
-  width: 22rem;
-}
-
-.w-\[64rem\] {
-  width: 64rem;
-}
-
-.w-\[32rem\] {
-  width: 32rem;
 }
 
 .max-w-5xl {
@@ -873,12 +905,20 @@ video {
   align-items: center;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
 .justify-center {
   justify-content: center;
 }
 
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-1 {
+  gap: 0.25rem;
 }
 
 .gap-10 {
@@ -907,28 +947,28 @@ video {
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-y-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
-}
-
-.space-y-6 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
-}
-
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
+.space-y-6 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
 .overflow-hidden {
@@ -939,6 +979,10 @@ video {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .rounded-full {
@@ -983,10 +1027,6 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
-.border-white\/10 {
-  border-color: rgb(255 255 255 / 0.1);
-}
-
 .border-neutral-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 229 229 / var(--tw-border-opacity));
@@ -997,17 +1037,46 @@ video {
   border-color: rgb(212 212 212 / var(--tw-border-opacity));
 }
 
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-white\/10 {
+  border-color: rgb(255 255 255 / 0.1);
+}
+
+.bg-\[\#29343D\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(41 52 61 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#2E3A44\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(46 58 68 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#F4F3ED\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 243 237 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f7f6f3\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 246 243 / var(--tw-bg-opacity));
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-black\/30 {
+  background-color: rgb(0 0 0 / 0.3);
+}
+
 .bg-black\/40 {
   background-color: rgb(0 0 0 / 0.4);
-}
-
-.bg-black\/70 {
-  background-color: rgb(0 0 0 / 0.7);
-}
-
-.bg-gray-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
 .bg-gray-200 {
@@ -1038,22 +1107,17 @@ video {
   background-color: rgb(255 255 255 / 0.9);
 }
 
-.bg-black\/30 {
-  background-color: rgb(0 0 0 / 0.3);
-}
-
-.bg-\[\#F4F3ED\] {
+.bg-\[\#36434F\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(244 243 237 / var(--tw-bg-opacity));
+  background-color: rgb(54 67 79 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#f7f6f3\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(247 246 243 / var(--tw-bg-opacity));
+.bg-\[29343D\] {
+  background-color: 29343D;
 }
 
-.bg-\[url\(\'https\:\/\/gvelondon\.com\/wp-content\/uploads\/2025\/02\/Untitled-design8\.png\'\)\] {
-  background-image: url('https://gvelondon.com/wp-content/uploads/2025/02/Untitled-design8.png');
+.bg-opacity-10 {
+  --tw-bg-opacity: 0.1;
 }
 
 .bg-\[url\(\'https\:\/\/img\.cdn\.dragon2000\.net\/C2846\/U737\/IMG_34372-medium\.jpg\'\)\] {
@@ -1066,14 +1130,6 @@ video {
 
 .bg-\[url\(\'https\:\/\/img\.cdn\.dragon2000\.net\/C2846\/U737\/IMG_34382-medium\.jpg\'\)\] {
   background-image: url('https://img.cdn.dragon2000.net/C2846/U737/IMG_34382-medium.jpg');
-}
-
-.bg-\[url\(\'https\:\/\/w0\.peakpx\.com\/wallpaper\/470\/207\/HD-wallpaper-yellow-porsche-car-hypercar-supercar-rich-luxury\.jpg\'\)\] {
-  background-image: url('https://w0.peakpx.com/wallpaper/470/207/HD-wallpaper-yellow-porsche-car-hypercar-supercar-rich-luxury.jpg');
-}
-
-.bg-\[url\(\'https\:\/\/wallpaper\.forfun\.com\/fetch\/5b\/5bb89660083ec8b879c5d39d5e61c02b\.jpeg\'\)\] {
-  background-image: url('https://wallpaper.forfun.com/fetch/5b/5bb89660083ec8b879c5d39d5e61c02b.jpeg');
 }
 
 .bg-cover {
@@ -1103,6 +1159,21 @@ video {
      object-position: center;
 }
 
+.object-\[center_-20px\] {
+  -o-object-position: center -20px;
+     object-position: center -20px;
+}
+
+.object-\[center_-90px\] {
+  -o-object-position: center -90px;
+     object-position: center -90px;
+}
+
+.object-\[center_-110px\] {
+  -o-object-position: center -110px;
+     object-position: center -110px;
+}
+
 .p-2 {
   padding: 0.5rem;
 }
@@ -1115,8 +1186,9 @@ video {
   padding: 1.5rem;
 }
 
-.p-8 {
-  padding: 2rem;
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .px-4 {
@@ -1164,12 +1236,39 @@ video {
   padding-bottom: 2rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
 .pb-40 {
   padding-bottom: 10rem;
 }
 
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
 .pl-6 {
   padding-left: 1.5rem;
+}
+
+.pt-16 {
+  padding-top: 4rem;
 }
 
 .pt-28 {
@@ -1184,20 +1283,28 @@ video {
   padding-top: 2rem;
 }
 
-.pb-3 {
-  padding-bottom: 0.75rem;
+.pt-1 {
+  padding-top: 0.25rem;
 }
 
-.pb-4 {
-  padding-bottom: 1rem;
+.pt-4 {
+  padding-top: 1rem;
 }
 
-.pb-8 {
-  padding-bottom: 2rem;
+.pt-24 {
+  padding-top: 6rem;
 }
 
-.pt-16 {
-  padding-top: 4rem;
+.pt-12 {
+  padding-top: 3rem;
+}
+
+.pb-12 {
+  padding-bottom: 3rem;
+}
+
+.pb-24 {
+  padding-bottom: 6rem;
 }
 
 .text-left {
@@ -1242,6 +1349,16 @@ video {
   line-height: 1rem;
 }
 
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1254,6 +1371,10 @@ video {
   font-weight: 600;
 }
 
+.font-light {
+  font-weight: 300;
+}
+
 .uppercase {
   text-transform: uppercase;
 }
@@ -1262,17 +1383,44 @@ video {
   line-height: 1.25;
 }
 
-.leading-relaxed {
-  line-height: 1.625;
+.tracking-\[\.25em\] {
+  letter-spacing: .25em;
 }
 
 .tracking-wide {
   letter-spacing: 0.025em;
 }
 
+.tracking-widest {
+  letter-spacing: 0.1em;
+}
+
+.tracking-\[0\.2em\] {
+  letter-spacing: 0.2em;
+}
+
+.tracking-\[0\.4em\] {
+  letter-spacing: 0.4em;
+}
+
+.text-\[\#111\] {
+  --tw-text-opacity: 1;
+  color: rgb(17 17 17 / var(--tw-text-opacity));
+}
+
+.text-\[\#333\] {
+  --tw-text-opacity: 1;
+  color: rgb(51 51 51 / var(--tw-text-opacity));
+}
+
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
 .text-gray-500 {
@@ -1295,41 +1443,31 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\#111\] {
-  --tw-text-opacity: 1;
-  color: rgb(17 17 17 / var(--tw-text-opacity));
-}
-
-.text-\[\#333\] {
-  --tw-text-opacity: 1;
-  color: rgb(51 51 51 / var(--tw-text-opacity));
-}
-
 .text-neutral-500 {
   --tw-text-opacity: 1;
   color: rgb(115 115 115 / var(--tw-text-opacity));
 }
 
-.text-\[\#b59f61\] {
+.text-white {
   --tw-text-opacity: 1;
-  color: rgb(181 159 97 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .underline {
   text-decoration-line: underline;
 }
 
-.opacity-60 {
-  opacity: 0.6;
-}
-
 .opacity-0 {
   opacity: 0;
+}
+
+.opacity-60 {
+  opacity: 0.6;
 }
 
 .shadow {
@@ -1341,6 +1479,12 @@ video {
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1400,22 +1544,8 @@ video {
   transition-duration: 700ms;
 }
 
-.duration-300 {
-  transition-duration: 300ms;
-}
-
-.ease-out {
-  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-}
-
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.hover\:scale-105:hover {
-  --tw-scale-x: 1.05;
-  --tw-scale-y: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:bg-black:hover {
@@ -1423,13 +1553,18 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-white\/10:hover {
   background-color: rgb(255 255 255 / 0.1);
 }
 
-.hover\:text-white:hover {
+.hover\:text-\[\#2E3A44\]:hover {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(46 58 68 / var(--tw-text-opacity));
 }
 
 .hover\:text-\[\#b59f61\]:hover {
@@ -1437,12 +1572,17 @@ video {
   color: rgb(181 159 97 / var(--tw-text-opacity));
 }
 
-.hover\:opacity-90:hover {
-  opacity: 0.9;
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .hover\:opacity-80:hover {
   opacity: 0.8;
+}
+
+.hover\:opacity-90:hover {
+  opacity: 0.9;
 }
 
 .group:hover .group-hover\:translate-x-1 {
@@ -1462,22 +1602,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.group:hover .group-hover\:opacity-100 {
-  opacity: 1;
-}
-
-.group:hover .group-hover\:opacity-90 {
-  opacity: 0.9;
-}
-
-.group:hover .group-hover\:opacity-20 {
-  opacity: 0.2;
-}
-
-.group:hover .group-hover\:opacity-40 {
-  opacity: 0.4;
-}
-
 .group:hover .group-hover\:opacity-50 {
   opacity: 0.5;
 }
@@ -1493,10 +1617,6 @@ video {
 
   .sm\:w-1\/3 {
     width: 33.333333%;
-  }
-
-  .sm\:w-\[30rem\] {
-    width: 30rem;
   }
 
   .sm\:grid-cols-2 {
@@ -1546,14 +1666,6 @@ video {
   .md\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
-
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .md\:grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
 }
 
 @media (min-width: 1024px) {
@@ -1563,10 +1675,6 @@ video {
 
   .lg\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .lg\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:px-20 {
