--- a/output.css
+++ b/output.css
@@ -572,6 +572,10 @@ video {
   pointer-events: none;
 }
 
+.visible {
+  visibility: visible;
+}
+
 .fixed {
   position: fixed;
 }
@@ -796,6 +800,10 @@ video {
   display: none;
 }
 
+.aspect-\[16\/9\] {
+  aspect-ratio: 16/9;
+}
+
 .aspect-\[6\.5\/8\] {
   aspect-ratio: 6.5/8;
 }
@@ -840,10 +848,6 @@ video {
   height: 1.75rem;
 }
 
-.h-96 {
-  height: 24rem;
-}
-
 .h-\[40vh\] {
   height: 40vh;
 }
@@ -860,16 +864,16 @@ video {
   height: 100%;
 }
 
+.h-icon-fluid {
+  height: clamp(1.5rem, 2vw, 2.25rem);
+}
+
 .h-px {
   height: 1px;
 }
 
 .h-screen {
   height: 100vh;
-}
-
-.min-h-\[220px\] {
-  min-height: 220px;
 }
 
 .min-h-\[450px\] {
@@ -922,6 +926,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-icon-fluid {
+  width: clamp(1.5rem, 2vw, 2.25rem);
 }
 
 .w-px {
@@ -1589,6 +1597,10 @@ video {
   padding-top: 7rem;
 }
 
+.pt-3 {
+  padding-top: 0.75rem;
+}
+
 .pt-4 {
   padding-top: 1rem;
 }
@@ -1627,11 +1639,6 @@ video {
   line-height: 2.25rem;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1642,7 +1649,11 @@ video {
 }
 
 .text-fluid-lg {
-  font-size: clamp(0.8rem, 1vw, 1.4rem);
+  font-size: clamp(0.8rem, 1vw, 1.9rem);
+}
+
+.text-fluid-md {
+  font-size: clamp(0.75rem, 1vw, 1.4rem);
 }
 
 .text-fluid-xl {
@@ -1890,6 +1901,10 @@ video {
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.delay-300 {
+  transition-delay: 300ms;
 }
 
 .duration-200 {
@@ -2210,5 +2225,27 @@ video {
   .\32xl\:text-5xl {
     font-size: 3rem;
     line-height: 1;
+  }
+}
+
+@media (max-width: 1570px) {
+  .max-1366\:cursor-pointer {
+    cursor: pointer;
+  }
+
+  .max-1366\:p-3 {
+    padding: 0.75rem;
+  }
+
+  .max-1366\:opacity-0 {
+    opacity: 0;
+  }
+
+  .group:hover .max-1366\:group-hover\:bg-opacity-60 {
+    --tw-bg-opacity: 0.6;
+  }
+
+  .group:hover .max-1366\:group-hover\:opacity-100 {
+    opacity: 1;
   }
 }
