--- a/output.css
+++ b/output.css
@@ -808,8 +808,16 @@ video {
   aspect-ratio: 8/5;
 }
 
+.h-1 {
+  height: 0.25rem;
+}
+
 .h-10 {
   height: 2.5rem;
+}
+
+.h-12 {
+  height: 3rem;
 }
 
 .h-14 {
@@ -890,6 +898,10 @@ video {
 
 .w-16 {
   width: 4rem;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .w-4 {
@@ -1063,6 +1075,10 @@ video {
   flex-direction: column;
 }
 
+.flex-col-reverse {
+  flex-direction: column-reverse;
+}
+
 .flex-wrap {
   flex-wrap: wrap;
 }
@@ -1205,10 +1221,6 @@ video {
   border-bottom-width: 1px;
 }
 
-.border-l-4 {
-  border-left-width: 4px;
-}
-
 .border-t {
   border-top-width: 1px;
 }
@@ -1309,6 +1321,11 @@ video {
 .bg-\[\#2a2e36\] {
   --tw-bg-opacity: 1;
   background-color: rgb(42 46 54 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#b6a26c\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(182 162 108 / var(--tw-bg-opacity));
 }
 
 .bg-\[transparent\] {
@@ -1504,13 +1521,12 @@ video {
   padding-bottom: 1rem;
 }
 
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
 .pb-1 {
   padding-bottom: 0.25rem;
+}
+
+.pb-12 {
+  padding-bottom: 3rem;
 }
 
 .pb-16 {
@@ -1553,10 +1569,6 @@ video {
   padding-left: 0.75rem;
 }
 
-.pl-6 {
-  padding-left: 1.5rem;
-}
-
 .pl-7 {
   padding-left: 1.75rem;
 }
@@ -1579,6 +1591,10 @@ video {
 
 .pt-1 {
   padding-top: 0.25rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
 }
 
 .pt-12 {
@@ -2098,15 +2114,16 @@ video {
     padding-left: 2rem;
     padding-right: 2rem;
   }
+
+  .sm\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
 }
 
 @media (min-width: 768px) {
   .md\:mt-0 {
     margin-top: 0px;
-  }
-
-  .md\:block {
-    display: block;
   }
 
   .md\:flex {
@@ -2153,6 +2170,11 @@ video {
     gap: 2rem;
   }
 
+  .md\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
   .md\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -2174,8 +2196,8 @@ video {
     padding-top: 2rem;
   }
 
-  .md\:pb-4 {
-    padding-bottom: 1rem;
+  .md\:pt-12 {
+    padding-top: 3rem;
   }
 
   .md\:text-4xl {
@@ -2193,15 +2215,36 @@ video {
     line-height: 1.5rem;
   }
 
+  .md\:text-fluid-xl {
+    font-size: clamp(1rem, 1.75vw, 2.5rem);
+  }
+
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
 }
 
 @media (min-width: 1024px) {
+  .lg\:block {
+    display: block;
+  }
+
   .lg\:flex {
     display: flex;
+  }
+
+  .lg\:grid {
+    display: grid;
+  }
+
+  .lg\:hidden {
+    display: none;
   }
 
   .lg\:max-w-5xl {
@@ -2224,6 +2267,18 @@ video {
     grid-template-columns: 2fr 1fr;
   }
 
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:items-center {
+    align-items: center;
+  }
+
+  .lg\:border-l-4 {
+    border-left-width: 4px;
+  }
+
   .lg\:px-20 {
     padding-left: 5rem;
     padding-right: 5rem;
@@ -2232,6 +2287,22 @@ video {
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .lg\:pb-0 {
+    padding-bottom: 0px;
+  }
+
+  .lg\:pl-6 {
+    padding-left: 1.5rem;
+  }
+
+  .lg\:pt-0 {
+    padding-top: 0px;
+  }
+
+  .lg\:text-left {
+    text-align: left;
   }
 
   .lg\:text-5xl {
@@ -2243,6 +2314,10 @@ video {
 @media (min-width: 1280px) {
   .xl\:max-w-6xl {
     max-width: 72rem;
+  }
+
+  .xl\:gap-12 {
+    gap: 3rem;
   }
 
   .xl\:px-12 {
